--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<html>
+    <head>
+    <title> Steven J. Lee </title>
+    <link href = "stylesheet.css" type = "text.css" rel = "style" />
+    </head>
+
+    <body>
+        <h1> Steven J. Lee </h1>
+
+        <p> I am a student at McGill University, majoring in Computer Science.
+            interested in the world and all of it's fascinating people!
+        </p>
+    </body>
+</html>
+
+
+
+
+<!-- 
+    font from: https://www.woowahan.com/?page_id=3985#/fonts
+-->   
