--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
+<!DOCTYPE html>
 <html>
-    <head>
-    <title> Steven J. Lee </title>
-    <link href = "stylesheet.css" type = "text.css" rel = "style" />
-    </head>
+<head>
+    <title> Steven J Lee </title>
 
-    <body>
-        <h1> Steven J. Lee </h1>
+</head>
+<h2>CatPhotoApp</h2>
+<main>
+  <p>Click here to view more <a href="#">cat photos</a>.</p>
+  
+  <a href="#"><img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
+  
+  <p>Things cats love:</p>
+  <ul>
+    <li>cat nip</li>
+    <li>laser pointers</li>
+    <li>lasagna</li>
+  </ul>
+  <p>Top 3 things cats hate:</p>
+  <ol>
+    <li>flea treatment</li>
+    <li>thunder</li>
+    <li>other cats</li>
+  </ol>
+  <form action="/submit-cat-photo">
+    <label><input type="radio" name="indoor-outdoor"> Indoor</label>
+    <label><input type="radio" name="indoor-outdoor"> Outdoor</label><br>
+    <label><input type="checkbox" name="personality"> Loving</label>
+    <label><input type="checkbox" name="personality"> Lazy</label>
+    <label><input type="checkbox" name="personality"> Energetic</label><br>
+    <input type="text" placeholder="cat photo URL" required>
+    <button type="submit">Submit</button>
+  </form>
+</main>
 
-        <p> I am a student at McGill University, majoring in Computer Science.
-            interested in the world and all of it's fascinating people!
-        </p>
-    </body>
+
 </html>
 
 
