--- a/index.html
+++ b/index.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
+<link href="https://fonts.googleapis.com/css?family=Hi+Melody&display=swap" rel="stylesheet">
+
+<style>
+  main{
+    font-family: 'Hi Melody', cursive;
+    font-size: 25px;
+  }
+
+</style>
+
 <html>
+
 <head>
     <title> Steven J Lee </title>
-
 </head>
-<h2>CatPhotoApp</h2>
+<body>
+      <header>Steven Lee</header>
 <main>
-  <p>Click here to view more <a href="#">cat photos</a>.</p>
-  
-  <a href="#"><img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
-  
-  <p>Things cats love:</p>
-  <ul>
-    <li>cat nip</li>
-    <li>laser pointers</li>
-    <li>lasagna</li>
-  </ul>
-  <p>Top 3 things cats hate:</p>
-  <ol>
-    <li>flea treatment</li>
-    <li>thunder</li>
-    <li>other cats</li>
-  </ol>
-  <form action="/submit-cat-photo">
-    <label><input type="radio" name="indoor-outdoor"> Indoor</label>
-    <label><input type="radio" name="indoor-outdoor"> Outdoor</label><br>
-    <label><input type="checkbox" name="personality"> Loving</label>
-    <label><input type="checkbox" name="personality"> Lazy</label>
-    <label><input type="checkbox" name="personality"> Energetic</label><br>
-    <input type="text" placeholder="cat photo URL" required>
-    <button type="submit">Submit</button>
-  </form>
+      <p> Hello World! </p>
 </main>
+</body>
 
 
 </html>
