--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    </div>
 
    <div class = "microgameDemo">
-        <h1> Here something I made for the 2020 Harvard Micro Jam!</h1>
+        <h1> Here is something I made for the 2020 Harvard Micro Jam!</h1>
         <iframe src="hmicrojam/index.html" name="targetframe" allowTransparency="false" 
          scrolling="no" frameborder="5" width="500px" height="500px" 
          >
