--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
       <canvas id="c"></canvas>
    </div>
 
+   <div class = "tutorial">
+     <h1>Online Talk on 3D modelling and Blender for Game Development given by me:</h1> 
+     <iframe width="720" height="480" src="https://www.youtube.com/embed/mVYkiFcuPq0" 
+     frameborder="20" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <div><br><br></div>
    <div class = "microgameDemo">
         <h1> Here is something I made for the 2020 Harvard Micro Jam!</h1>
         <iframe src="hmicrojam/index.html" name="targetframe" allowTransparency="false" 
