--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>Hello! My name is Steven Lee.</h1>
         <p class="intro"> As a Computer Science student currently studying at McGill University, I am passionate about game development and computer graphics!
         <br><br>You can often find me working on open source projects such as Blender and McGill GameDev's Scarlet Engine.
-        <br><br> On the weekends, I play with fantasy consoles such as Pico-8 to prototype gameplay, with a delicious cup of coffee next to me!</p> 
+        <br><br> On the weekends, I play with Pico-8 (fantasy console) by scripting cool things in Lua, with a delicious cup of coffee next to me!</p> 
       </div>
           <div class="block">
           <img src="https://github.com/steven-j-lee/steven-j-lee.github.io/blob/master/imageAssets/IMG_3942.jpeg?raw=true" alt="An illustration of me in profile">
