--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
     <div class="home">
       <div class="block">
         <h1>Hello! My name is Steven Lee.</h1>
-        <p class="intro"> As a Computer Science student currently studying at McGill University, I am passionate about game development and computer graphics!
-        <br><br>You nowadays can find me online, implementing tools on McGill GameDev's Scarlet Engine.
-        <br><br> On the weekends, I play with Pico-8 (fantasy console) by scripting cool things in Lua, with a delicious cup of coffee next to me!</p> 
+        <p class="intro">  I am passionate about game and software development, especially in the topic of computer graphics.
+        <br><br> On the weekends, I like to hack around with Pico-8 (fantasy console) by scripting cool things in Lua, with a delicious cup of coffee next to me!</p> 
       </div>
           <div class="block">
           <img src="https://github.com/steven-j-lee/steven-j-lee.github.io/blob/master/imageAssets/IMG_3942.jpeg?raw=true" alt="An illustration of me in profile">
