--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <nav>
-      <a href="slre.pdf">Resume</a>
+      <a href="stevenlee_cv.pdf">Resume</a>
       <a href="">Projects</a>
       <a href="https://github.com/steven-j-lee">Github</a>
       <a href="https://www.linkedin.com/in/steven-j-lee/">LinkedIn</a>
