--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="home">
       <div class="block">
         <h1>Hello! My name is Steven Lee.</h1>
-        <p class="intro">  I am passionate about game and software development, especially in the topic of computer graphics.
+        <p class="intro">  I am passionate about game and software development, and especially the topic of computer graphics.
         <br><br> On the weekends, I like to hack around with Pico-8 (fantasy console) by scripting cool things in Lua, with a delicious cup of coffee next to me!</p> 
       </div>
           <div class="block">
